fix: 结账检查接口改成get请求，去掉ignore_must_plan参数
