# main/app/dto/req/instant.go
@@ -155,7 +155,6 @@ type OrderMemberCancelReq struct {
 }
 
 type InstantOrderCheckReq struct {
-	SaleBillUuid   uint64 `json:"sale_bill_uuid"`   // 销售账单UUID, 必填
-	SaleOrderUuid  uint64 `json:"sale_order_uuid"`  // 销售订单UUID, 必填
-	IgnoreMustPlan bool   `json:"ignore_must_plan"` // 忽略必点计划, 非必填
+	SaleBillUuid  uint64 `json:"sale_bill_uuid"`  // 销售账单UUID, 必填
+	SaleOrderUuid uint64 `json:"sale_order_uuid"` // 销售订单UUID, 必填
 }
